2005-06-16  Al Riddoch  <alriddoch@zepler.org>

	* configure.ac: Increment version number.

	* NEWS: Update news.

	* Releases 0.2.4

2005-06-14  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/DepthShader.cpp, Mercator/DepthShader.h,
	  Mercator/GrassShader.cpp, Mercator/GrassShader.h,
	  Mercator/ThresholdShader.cpp, Mercator/ThresholdShader.h:
	  Move static variable definitions into the cpp files, as gcc 4
	  isn't happy otherwise.

2005-06-11  Al Riddoch  <alriddoch@zepler.org>

	* configure.ac: Increment interface version.

	* NEWS: Update NEWS.

	* Release 0.2.3

2005-06-02  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/DepthShader.cpp, Mercator/DepthShader.h,
	  Mercator/GrassShader.cpp, Mercator/GrassShader.h,
	  Mercator/ThresholdShader.cpp, Mercator/ThresholdShader.h:
	  Rename static variables that hold parameter key strings
	  to be prefixed with key_. Add static variables to hold the
	  default values of parameters. Make sure the default values
	  of parameters are set in the constructor that takes named
	  paramters. Add accessors for all shader parameters.

	* tests/testShaderFactory.cpp: Add code to test whether shaders
	  correctly  set their paramaters when passes in as named paramters.
	  Includes check to make sure parameters all default to the right
	  value.

2005-05-28  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/GrassShader.cpp: Added missing static variable definitions.

2005-05-28  Al Riddoch  <alriddoch@zepler.org>

	* configure.ac: Increment version for dependency handling.

	* Mercator/DepthShader.h, Mercator/GrassShader.h,
	  Mercator/ThresholdShader.h: Add static string variable declarations
	  for parameter names for shaders that take parameters. Provide a more
	  in depth explanation of the algorithm used by GrassShader.

	* Mercator/DepthShader.cpp, Mercator/FillShader.cpp,
	  Mercator/GrassShader.cpp, Mercator/ThresholdShader.cpp:
	  Implement the code in the Parameters version of the constructor